# spelunk

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  README.md  SECURITY.md  SKILL.md  SKILLS.md  about.toml  audit.toml  copilot-instructions.md  deny.toml  docker-compose.full.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  fuzz.yml  release.yml  security.yml
baselines/: README.md  repobench-gemma-4-e2b-it-baseline.json
bench/: README.md  report.py  requirements.txt  setup_repos.sh
bench/codesearchnet/: evaluate.py  run.sh
bench/gemma/: run.sh
bench/gemma/crosscodeeval/: evaluate.py  run.sh
bench/gemma/swebench_local/: agent_baseline.py  agent_spelunk.py  run.sh
bench/linearrag/: labels.json  results.json  run_eval.py
bench/results/: repobench-baseline-20260403T182034Z.json  repobench-baseline-20260421T120941Z.json
bench/swebench/: agent_baseline.py  agent_with_spelunk.py  run.sh  tasks_50.json
docs/: Github-actions-recommended-rust.md  agent-guide.md  architecture.md  building.md  commands.md  getting-started.md  graphs.md  memory.md  openapi.json  plumbing-and-porcelain.md  releasing.md  security-review-action-plan.md  server.md  testing.md
docs/adr/: 001-scope-boundaries.md
docs/architecture/: plumbing-commands.md
docs/example/: AGENT.md
docs/examples/: multi-session-agent-workflow.md  onboarding-a-new-codebase.md  pre-change-impact-analysis.md
docs/plans/: agentic-expansion.md  convention-extraction.md  security-review.md  shared-memory-server.md  spec-files.md
docs/security/: SECURITY-PROGRAM.md  THREAT-MODEL.md
fuzz/: Cargo.toml  run.sh
fuzz/fuzz_targets/: fuzz_chunker.rs  fuzz_cli_history_entry.rs  fuzz_escape_xml.rs  fuzz_ndjson_parse.rs  fuzz_parser.rs  fuzz_secret_scanner.rs
migrations/: 001_initial.sql  002_vectors.sql  003_graph.sql  004_memory.sql  005_memory_lifecycle.sql  006_specs.sql  007_fts.sql  008_token_counts.sql  009_graph_rank.sql  010_summaries.sql  011_usage.sql  012_memory_fts.sql  013_memory_source_ref.sql  014_memory_temporal.sql  015_memory_edges.sql  016_snapshots.sql  017_snapshot_vectors.sql  018_graph_edges_compound_idx.sql  server_001.sql  server_002.sql
src/: backends.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  registry.rs  utils.rs
src/cli/: args.rs  commands.rs  mod.rs
src/cli/cmd/: ask.rs  check.rs  explore.rs  graph.rs  helpers.rs  history.rs  hooks.rs  index.rs  init.rs  link.rs  links.rs  memory.rs  misc.rs  mod.rs  plan.rs  search.rs  snapshot.rs  spec.rs  status.rs  ui.rs  verify.rs
src/cli/cmd/index/: embed_phase.rs  mentions.rs  mod.rs  parse_phase.rs  summaries.rs  worktree.rs
src/cli/cmd/memory/: add.rs  archive.rs  failures.rs  graph_cmd.rs  harvest.rs  harvest_claude.rs  list.rs  mod.rs  push.rs  search.rs  show.rs  since.rs  supersede.rs  timeline.rs  watch.rs
src/cli/cmd/plumbing/: cat_chunks.rs  embed_cmd.rs  graph_edges.rs  hash_file.rs  knn.rs  ls_files.rs  mod.rs  parse_file.rs  read_memory.rs
src/embeddings/: candle.rs  gemma3_encoder.rs  lmstudio.rs  mod.rs  openai_compat.rs
src/indexer/: chunker.rs  docparser.rs  graph.rs  mod.rs  pagerank.rs  parser.rs  pdf.rs  secrets.rs  summariser.rs
src/indexer/graph/: builtins.rs  edges.rs  mod.rs
src/indexer/parser/: mod.rs  text.rs  ts_walker.rs
src/llm/: candle.rs  lmstudio.rs  mod.rs  openai_compat.rs
src/search/: explore.rs  mod.rs  rag.rs  tokens.rs  tools.rs
src/server/: db.rs  handlers.rs  mod.rs
src/storage/: backend.rs  chunks.rs  db.rs  files.rs  graph.rs  memory.rs  mod.rs  remote.rs  search.rs  snapshots.rs  specs.rs  stats.rs
src/storage/memory/: edges.rs  mod.rs  notes.rs  search.rs  tests.rs
src/utils/: dates.rs  mod.rs
tests/: cat_chunks.rs  e2e_cli.rs  embed.rs  graph_edges.rs  hash_file.rs  integration_compose.rs  integration_db.rs  integration_server.rs  knn.rs  ls_files.rs  mock_lmstudio.rs  mock_openai_compat.rs  parse_file.rs  plumbing_helpers.rs  prop_chunker.rs  prop_embeddings.rs  prop_token_budget.rs  read_memory.rs  unit_chunker.rs  unit_embeddings.rs  unit_graph.rs
tests/common/: mod.rs
tests/fixtures/simple-project/src/: lib.rs  main.rs  utils.rs
