[package]
name = "codeanalysis"
version = "1.0.0"
edition = "2024"
description = "Local code search and understanding via RAG — indexed with tree-sitter, stored in SQLite"
license = "MIT"

[[bin]]
name = "ca"
path = "src/main.rs"

[features]
default = ["backend-lmstudio"]
backend-lmstudio = ["dep:reqwest", "dep:futures-util"]

[dependencies]

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Async traits
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config file
toml = "0.8"
dirs = "5"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# Vector extension for SQLite
sqlite-vec = "0.1"

# Tree-sitter core + language grammars
tree-sitter            = "0.25"
tree-sitter-rust       = "0.24"
tree-sitter-python     = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go         = "0.25"
tree-sitter-java       = "0.23"
tree-sitter-c          = "0.24"
tree-sitter-cpp        = "0.23"
tree-sitter-json       = "0.24"
tree-sitter-html       = "0.23"
tree-sitter-css        = "0.25"
tree-sitter-hcl        = "1.1"
tree-sitter-proto      = "0.4"
tree-sitter-sequel     = "0.3"

# HTTP client for LM Studio backend
reqwest      = { version = "0.12", features = ["json", "stream"], optional = true }
futures-util = { version = "0.3", optional = true }

# Secret scanning in indexer
regex = { version = "1", default-features = false, features = ["std"] }

# Content hashing (change detection for incremental indexing)
blake3 = "1"

# Filesystem traversal + .gitignore support
ignore = "0.4"

# Progress bars
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
