[package]
name = "spelunk-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.spelunk]
path = ".."

# Disable LTO for faster fuzzer builds.
[profile.release]
lto = false
codegen-units = 4

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
